# hashtree

./: AGENTS.md  README.md
.github/workflows/: release.yml
.hashtree/: ci.toml
apps/iris-files/: .gitignore  README.md  docs.html  index.html  maps.html  package.json  playwright.config.ts  playwright.iris.config.ts  uno.config.ts  video.html  vite.config.ts  vite.docs.config.ts  vite.iris.config.ts  vite.maps.config.ts  vite.video.config.ts  wdio.tauri.conf.ts
apps/iris-files/dist-docs/: index.html
apps/iris-files/e2e/: address-bar-tree-nav.spec.ts  blossom-disabled.spec.ts  blossom-fallback.spec.ts  blossom-push.spec.ts  chunk-boundary-video.spec.ts  ci-status.spec.ts  compression.spec.ts  cross-platform.test.ts  cross-user-stream.spec.ts  crosslang-sync.spec.ts  delete-tree.spec.ts  direct-nav-worker-init.spec.ts  direct-tree-nav.spec.ts  docs-app.spec.ts  docs-image-collaboration.spec.ts  docs-thumbnail.spec.ts  dosbox.spec.ts  explorer.test.ts  feed-multiple-owners.spec.ts  fixtures.ts  git-basic.spec.ts  git-branch-compare.spec.ts  (+55 more)
apps/iris-files/e2e-tauri/: address-bar-navigation.spec.ts  htree-nip07-protocol.spec.ts  htree-origin-isolation.spec.ts  image-viewer-persistence.spec.ts  jumble-extension-login.spec.ts  media-directory.spec.ts  nhash-navigation.spec.ts  nip07-local-test.spec.ts  nip07-main-window.spec.ts  video-source-loading.spec.ts
apps/iris-files/src-tauri/: Cargo.toml  tauri.conf.json
apps/iris-files/src-tauri/capabilities/: default.json
apps/iris-files/src-tauri/src/: history.rs  htree.rs  lib.rs  nip07.rs
apps/iris-files/src-tauri/src/worker/: blossom.rs  combined_store.rs  tree.rs
apps/iris-files/src-tauri/tests/: htree_test.rs  nip07_test.rs  relay_proxy_test.rs
rust/: AGENTS.md  Cargo.toml
rust/crates/hashtree-sim/: Cargo.toml
rust/crates/hashtree-sim/tests/: nostr_interop.rs
ts/: .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  playwright.config.ts  playwright.production.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  wdio.tauri.conf.ts
ts/.hashtree/: ci.toml
ts/e2e/: blossom-disabled.spec.ts  chunk-boundary-video.spec.ts  cross-platform.test.ts  cross-user-stream.spec.ts  crosslang-sync.spec.ts  direct-nav-worker-init.spec.ts  docs-image-collaboration.spec.ts  dosbox.spec.ts  explorer.test.ts  feed-multiple-owners.spec.ts  git-checkout.spec.ts  git-commit-status.spec.ts  git-fork-pr.spec.ts  git-history.spec.ts  git-init.spec.ts  git-push-htree.spec.ts  git-status-edit.spec.ts  hashtree-rs-connection.spec.ts  hashtree-rs-crosslang.spec.ts  hashtree-rs-interop.spec.ts  hashtree-rs-lock.ts  html-viewer.spec.ts  image-viewer.spec.ts  link-visible-tree.spec.ts  live-indicator.spec.ts  live-video.spec.ts  native-git-ops.spec.ts  nhash-directory.spec.ts  offline-upload.spec.ts  permalink.spec.ts  playlist-management.spec.ts  recents.spec.ts  settings-stats.spec.ts  settings.spec.ts  sidebar-feed-direct-nav.spec.ts  social-graph-root.spec.ts  test-utils.ts  tree-loading.spec.ts  video-app.spec.ts  video-feed-follows.spec.ts  (+14 more)
ts/e2e-tauri/: startup-timing.spec.ts  video-source-loading.spec.ts  webrtc-connection.spec.ts  webview-history.spec.ts
ts/plans/: maps-data-hashtree.md
(+140 files in other folders)
